# stable-retro

./: .buildinfo  .clang-format  .gitignore  .pre-commit-config.yaml  404.html  CHANGES.md  CMakeLists.txt  CONTRIBUTING.md  LICENSES.md  MANIFEST.in  README.md  cmake-format.py  conftest.py  index.html  pyproject.toml  searchindex.js  setup.py  travis.py
.github/: issue_template.md
.github/workflows/: action.yml  build-docs-dev.yml  build-docs-version.yml  build-docs.yml  build-publish-linux.yml  build-publish.yml  docs-build-dev.yml  docs-build-version.yml  docs-manual-build.yml  docs-manual-versioning.yml  docs-versioning.yml  manual-build-docs-version.yml  pre-commit.yml  publish-build.yml  test-cpp.yml  test-python.yml  test.yml
README/: index.html
_modules/: index.html
_modules/retro/: index.html
_modules/retro/enums/: index.html
_modules/retro/retro_env/: index.html
_static/: documentation_options.js
cores/: 32x.json  arcade.json  fbneo.json  genesis.json  mame.json  saturn.json
cores/32x/: Makefile  Makefile.libretro
cores/32x/jni/: Android.mk
cores/32x/pico/: cart.c  debugCPU.c  draw.c  draw2.c  draw2_arm.S  draw_arm.S  memory.c  misc.c  pico.c  pico.h  pico_int.h  sek.c  state.c  videoport.c
cores/arcade/: Makefile  whatsnew.html
cores/arcade/fbahelpfilesrc/: acknowledgments.htm  cheat_format.htm  dialog_game_select.htm  dialog_inputs.htm  dialog_rom_paths.htm  dialog_shot_factory.htm  dialog_support_path.htm  localise_app.htm  localise_gamelist.htm  menu_audio.htm  menu_game.htm  menu_help.htm  menu_misc.htm  presets.htm
cores/atari2600/: README.md  libretro.cxx  libretro.h
cores/fbneo/: .gitlab-ci.yml  README-SDL.md  appveyor.yml.ignore
cores/fbneo/fbahelpfilesrc/: Table of Contents.hhc  command.htm  dialog_cheats.htm  dialog_choose_monitor.htm  dialog_dips.htm  dialog_game_info.htm  dialog_ips_manager.htm  dialog_multislot.htm  dialog_neocdz.htm  dialog_palette_viewer.htm  intro.htm  keys.htm  menu_input.htm  menu_video.htm  sysreq.htm
cores/gba/libretro-build/: Makefile.linux-portable_x86_64  Makefile.linux_x86  Makefile.mingw_x86  Makefile.mingw_x86_64  Makefile.wii_ppc  Makefile.windows_x86
cores/gba/tools/: deploy-mac.py  perf.py
cores/genesis/: .gitignore  LICENSE.txt  Makefile.libretro
cores/genesis/core/: genesis.c  hvc.h  io_ctrl.c  io_ctrl.h  loadrom.h  membnk.c  memz80.c  state.c  system.c  system.h  vdp_ctrl.c
cores/genesis/gcw0/: Makefile  config.c  config.h  error.c  error.h  main.c  unzip.c  utils.c  utils.h
cores/genesis/gx/: config.h  gx_audio.c  gx_input.h  gx_video.c
cores/genesis/libretro/: libretro.c  libretro.h  osd.h
cores/genesis/psp2/: unzip.h
cores/genesis/sdl/: Makefile.sdl1  config.h  error.c  error.h  readme-sdl.txt  unzip.c
cores/mame/metadata/: catver.ini
cores/nes/: Makefile.common  Makefile.libretro  changelog.txt  zzz_todo.txt
cores/pce/: .gitignore  COPYING
cores/saturn/: .gitignore  .gitlab-ci.yml  .travis.yml  Makefile  Makefile.common  README.md  disc.cpp  disc.h  input.cpp  input.h  libretro.cpp  libretro_core_options.h  libretro_settings.cpp  libretro_settings.h
cores/snes/: conffile.cpp  cpuexec.cpp  cpuops.cpp  debug.cpp  dsp4.cpp  gfx.cpp  logger.cpp  memmap.cpp  msu1.cpp  ppu.cpp  sa1cpu.cpp  seta011.cpp  spc7110.cpp  tile.cpp
developing/: index.html
docker/: build_images.sh  build_windows.bat
docker/cmake/: win32.cmake  win64.cmake
docker/linux/: Dockerfile
docker/scripts/: install_python.sh
docker/windows/: Dockerfile  Dockerfile.build
docs/: .gitignore  404.md  README.md  conf.py  developing.md  developing.rst  getting_started.md  getting_started.rst  index.md  integration.md  integration.rst  python.md  python.rst  release_notes.md  requirements.txt
genindex/: index.html
getting_started/: index.html
integration/: index.html
main/: .buildinfo  404.html  CNAME  index.html  objects.inv  searchindex.js
main/README/: index.html
main/_modules/: index.html
main/_static/: documentation_options.js
main/developing/: index.html
main/genindex/: index.html
main/getting_started/: index.html
main/integration/: index.html
main/python/: index.html
main/release_notes/: index.html
main/search/: index.html
python/: index.html
release_notes/: index.html
retro/: VERSION.txt  __init__.py  enums.py  rendering.py  retro_env.py
retro/data/: .gitignore  __init__.py
retro/examples/: best.bk2  brute.py  determinism.py  discretizer.py  interactive.py  ppo.py  random_agent.py  retro_interactive.py  trivial_random_agent.py  trivial_random_agent_multiplayer.py
retro/import/: __main__.py  sega_classics.py
retro/scripts/: import_path.py  import_sega_classics.py  playback_movie.py
retro/testing/: __init__.py  tools.py  verify_changes.py
search/: index.html
src/: emulator.cpp  memory.h
src/ui/: CMakeLists.txt  MainWindow.cpp  Makefile  main.cpp
tests/: CMakeLists.txt  Makefile  dummy.json  emulator.cpp  test_env.py  test_paths.py
tests/data/: test_integration.py  test_load.py  test_roms.py
tests/roms/: Dekadence-Dekadrive.md  Palette-Tech-1-Demo.32x
tests/test_cibuildwheel/: README.md  apt-based.Dockerfile  conda-based.Dockerfile  dnf-based.Dockerfile  install_and_test_wheel.sh  test_cibuildwheel_linux.sh
tests/test_cpp/: Makefile
tests/test_python/: __init__.py  test_env.py  test_integration.py  test_load.py  test_paths.py  test_roms.py
v0.9.1/_modules/: index.html
v0.9.1/developing/: index.html
v0.9.1/getting_started/: index.html
v0.9.1/release_notes/: index.html
v0.9.1/search/: index.html
v0.9.2/: .buildinfo  404.html  index.html  objects.inv  searchindex.js
v0.9.2/README/: index.html
v0.9.2/_modules/: index.html
v0.9.2/_static/: documentation_options.js
v0.9.2/developing/: index.html
v0.9.2/integration/: index.html
v0.9.2/python/: index.html
v0.9.2/search/: index.html
v0.9.3/: .buildinfo  index.html  searchindex.js
v0.9.3/_modules/: index.html
v0.9.3/_static/: documentation_options.js
v0.9.3/genindex/: index.html
v0.9.3/release_notes/: index.html
v0.9.3/search/: index.html
(+1816 files in other folders)
